# wakame

./: .gitignore  CHANGES.md  LICENSE.txt  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml
mecabnome/: __init__.py  analyzer.py  tokenfilter.py
tests/: test_tokenizer.py
wakame/: __init__.py  analyzer.py  charfilter.py  tokenfilter.py  tokenizer.py
