[tool.poetry]
name = "wakame"
version = "1.0.0"
description = "\"Wrapper of `mecab`, which provide interface like `janome`.\""
authors = ["tenajima <tenajima@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tenajima"
repository = "https://github.com/tenajima/wakame"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
mecab-python3 = "^0.996.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
flake8 = "^3.7.9"
jupyterlab = "^1.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
